--- a/Integration/index.html
+++ b/Integration/index.html
@@ -1,49 +1,53 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8">
-    <title>Une Année De Voyages</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <header class='header'>
-      <h1 class='header-title'>Une année de voyages</h1>
-      <span class='header-bar'></span>
-      <p class='header-paragraph'>Une revue pour les gens qui aiment voyager et découvrir</p>
-      <div></div>
-    </header>
 
-    <section class="articles">
-      <h2 class="articles-title">Articles</h2>
-      <span class='articles-bar'></span>
-      <div class="articles-content"></div>
-      <div class="articles-content"></div>
-      <a class="articles-button" href="#">Plus d'articles</a>
-    </section>
+<head>
+  <meta charset="UTF-8">
+  <title>Une Année De Voyages</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
-    <section class="tweets">
-      <span class='tweets-bar'></span>
-      <h2 class="tweets-title">Live Tweets</h2>
-      <p>*works in construction</p>
-    </section>
+<body>
+  <header class='header'>
+    <h1 class='header-title'>Une année de voyages</h1>
+    <span class='header-bar'></span>
+    <p class='header-paragraph'>Une revue pour les gens qui aiment voyager et découvrir</p>
+    <div></div>
+  </header>
 
-    <footer class="partner">
-      <h2 class="partner-title">Partenaires</h2>
-      <ul class="partner-content">
-        <li class="partner-content-link"><img src="" alt="Aeroports de Paris"></li>
-        <li class="partner-content-link"><img src="" alt="Fujifilm"></li>
-        <li class="partner-content-link"><img src="" alt="Nikon"></li>
-      </ul>
-      <div class="partner-copyrights">
-        <p class="partner-copyrights-paragraph">Tous droits réservés Une Année De Voyages ©2018-2022</p>
-      </div>
-    </footer>
+  <section class="articles">
+    <h2 class="articles-title">Articles</h2>
+    <span class='articles-bar'></span>
+    <div class="articles-content"></div>
+    <div class="articles-content"></div>
+    <a class="articles-button" href="#">Plus d'articles</a>
+  </section>
+
+  <section class="tweets">
+    <span class='tweets-bar'></span>
+    <h2 class="tweets-title">Live Tweets</h2>
+    <p>*works in construction</p>
+  </section>
+
+  <footer class="partner">
+    <h2 class="partner-title">Partenaires</h2>
+    <ul class="partner-content">
+      <li class="partner-content-link"><img src="" alt="Aeroports de Paris"></li>
+      <li class="partner-content-link"><img src="" alt="Fujifilm"></li>
+      <li class="partner-content-link"><img src="" alt="Nikon"></li>
+    </ul>
+    <div class="partner-copyrights">
+      <p class="partner-copyrights-paragraph">Tous droits réservés Une Année De Voyages ©2018-2022</p>
+    </div>
+  </footer>
+  <script src="index.js"></script>
   <script>
     const ui = {
       btn: document.querySelector('.articles-button'),
       modal: document.querySelector('.modal'),
     }
   </script>
-  </body>
+</body>
+
 </html>
