--- a/Integration/index.html
+++ b/Integration/index.html
@@ -1,52 +1,39 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8">
+    <title>Une Année De Voyages</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+    <body>
+      <section class="homepage">
+        <div class="homepage-background"><img class="homepage-background-img" src="'../styles/img/magazine.jpg'" alt=""></div>
+        <h1 class="homepage-title">Une années de voyages</h1>
+        <div class="homepage-bar"></div>
+        <p class="homepage-paragraph">Une revue pour les gens qui <br />
+          aime voyager et découvir</p>
+    </section>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Une Année De Voyages</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
+    <section class="about">
+      <h2 class="about-title">A propos</h2>
+      <div class="about-bar"></div>
+        <div class="about-paragraph">
+          <p class="about-paragraph-content">Un mook annuel à collectionner grâce à sa couverture illustrée, œuvre d'un artiste</p>
+          <p class="about-paragraph-content">Des goddies : 5 dessins originaux issus des "illustrateurs voyageurs" de la communauté internationale Urban Sketchers</p>
+          <p class="about-paragraph-content">300 pages de reportages sous forme de "carnets de voyages"</p>
+          <p class="about-paragraph-content">Des destinations testées et approuvées par nos journalistes (pas de mauvaise surprise à l'arrivée !)</p>
+          <p class="about-paragraph-content">40.000 exemplaires vendus en kiosques, librairies et sur notre site</p>
+          <p class="about-paragraph-content">Des fiches pratiques d'exception et détachables.</p>
+          <p class="about-paragraph-content">TV YouTube</p>
+        </div>
+    </section>
 
-<body>
-  <header class='header'>
-    <h1 class='header-title'>Une année de voyages</h1>
-    <span class='header-bar'></span>
-    <p class='header-paragraph'>Une revue pour les gens qui aiment voyager et découvrir</p>
-    <div></div>
-  </header>
+    <section class="tweets">
 
-  <section class="articles">
-    <h2 class="articles-title">Articles</h2>
-    <span class='articles-bar'></span>
-    <div class="articles-content"></div>
-    <div class="articles-content"></div>
-    <a class="articles-button" href="#">Plus d'articles</a>
-  </section>
+      <h2 class="tweets-title">Live Tweets</h2>
+      <div class="tweets-bar"></div>
+    </section>
 
-  <section class="tweets">
-    <span class='tweets-bar'></span>
-    <h2 class="tweets-title">Live Tweets</h2>
-    <p>*works in construction</p>
-  </section>
-
-  <footer class="partner">
-    <h2 class="partner-title">Partenaires</h2>
-    <ul class="partner-content">
-      <li class="partner-content-link"><img src="" alt="Aeroports de Paris"></li>
-      <li class="partner-content-link"><img src="" alt="Fujifilm"></li>
-      <li class="partner-content-link"><img src="" alt="Nikon"></li>
-    </ul>
-    <div class="partner-copyrights">
-      <p class="partner-copyrights-paragraph">Tous droits réservés Une Année De Voyages ©2018-2022</p>
-    </div>
-  </footer>
-  <script src="index.js"></script>
-  <script>
-    const ui = {
-      btn: document.querySelector('.articles-button'),
-      modal: document.querySelector('.modal'),
-    }
-  </script>
-</body>
-
+  </body>
 </html>
