--- a/Integration/index.html
+++ b/Integration/index.html
@@ -35,5 +35,18 @@
       <div class="tweets-bar"></div>
     </section>
 
+    <footer class="partners">
+      <h2 class="partners-title">Partenaires</h2>
+      <div class="partners-container">
+        <img class="partners-container-aeroports" src="styles/img/aeroports.png" alt="Aéroports de Paris" class="partners-container-content">
+        <img class="partners-container-fujifilm" src="styles/img/fujifilm.png" alt="Fujifilm" class="partners-container-content">
+        <img class="partners-container-nikon" src="styles/img/nikon.jpg" alt="Nikon" class="partners-container-content">
+      </div>
+      <div class="partners-copyrights">
+        <p class="partners-copyrights-content">Tous droits réservés Une Année De Voyages ©2018-2022</p>
+      </div>
+    </footer>
+
+
   </body>
 </html>
